--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 <div>
     <h1 style="text-align: left;"><span style="color: #ff0000;"><strong>The Archive.CF #1</strong></span></h1>
-<form action="https://google.com" method="get"><button type="submit"> Explore </button></form>
+<form action="https://enderop44.github.io/Archive/explore.html" method="get"><button type="submit"> Explore </button></form>
 </div>
 
 
