--- a/explore.html
+++ b/explore.html
@@ -37,7 +37,7 @@
 
 <body>
 <div>
-    <form action="https://google.com" method="get"><button type="submit">Home</button></form>
+    <form action="https://enderop44.github.io/Archive/" method="get"><button type="submit">Home</button></form>
 <hr />
 <h1 style="text-align: left;"><span style="color: #ff0000;"><strong>Explore!</strong></span></h1>
 <form action="https://download1486.mediafire.com/n489d8qkmgig/u0x8f99q7t5ujv7/Office+2021.zip" method="get"><button type="submit">Office 2021.zip</button></form>
