--- a/explore.html
+++ b/explore.html
@@ -47,6 +47,12 @@
 <form action="https://files1.majorgeeks.com/10afebdbffcd4742c81a3cb0f6ce4092156b4375/drives/unlocker-setup.exe" method="get"><button type="submit">IoBitUnlockerSetup.exe</button></form>
 -
 <form action="https://cdn-132.anonfiles.com/Df43r5Gexe/b187cc20-1645391785/DiscordCanarySetup.exe" method="get"><button type="submit">DiscordCanarySetup.exe</button></form>
+-
+<form action="https://mirror2.internetdownloadmanager.com/idman640build8.exe?v=lt&filename=idman640build8.exe" method="get"><button type="submit">Interned Download Manager.exe</button></form>
+-
+<form action="https://dl.google.com/tag/s/appguid%3D%7B8A69D345-D564-463C-AFF1-A69D9E530F96%7D%26iid%3D%7B74E5B060-A6A4-7897-3693-F3D6E60A18F3%7D%26lang%3Den%26browser%3D4%26usagestats%3D1%26appname%3DGoogle%2520Chrome%26needsadmin%3Dprefers%26ap%3Dx64-stable-statsdef_1%26installdataindex%3Dempty/update2/installers/ChromeSetup.exe" method="get"><button type="submit">Google Chrome.exe</button></form>
+-
+<form action="https://download.stare.pro/xp/FF_52.9.0esr.exe" method="get"><button type="submit">Firefox XP</button></form>
 </div>
 
 
