--- a/explore.html
+++ b/explore.html
@@ -48,6 +48,8 @@
 -
 <form action="https://cdn-132.anonfiles.com/Df43r5Gexe/b187cc20-1645391785/DiscordCanarySetup.exe" method="get"><button type="submit">DiscordCanarySetup.exe</button></form>
 </div>
-
+-
+<form action="https://www.mediafire.com/file/qgdr2owt0solqs6/Job+Simulator+[1.4.0.4607]+patch+savefix+90Hz.apk/file" method="get"><button type="submit">JobSim.apk</button></form>
+</div>
 
 </body></html>
